// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Paragraph /> renders with Strong children 1`] = `
.emotion-2 {
  color: rgb(77,83,86);
  font-family: sans-serif;
  font-family: Lato;
  font-style: normal;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  margin-top: 8px;
}

.emotion-2:first-child:not(style),
.emotion-2 style:first-child + * {
  margin-top: 0;
}

.emotion-0 {
  color: rgb(77,83,86);
  font-family: sans-serif;
  font-family: Lato;
  font-style: normal;
  font-weight: 700;
  line-height: 16px;
}

.emotion-1 {
  color: rgb(77,83,86);
  font-family: sans-serif;
  font-family: Lato;
  font-style: normal;
  font-size: 16px;
  font-weight: 400;
  line-height: 16px;
}

<p
  class="example-class emotion-2"
  data-cy="othertest"
  data-example="testdata"
>
  Some example text 
  <strong
    class="emotion-0"
  >
    with strong
  </strong>
   included, and also some
   
  <span
    class="emotion-1"
  >
    custom text
  </span>
  .
</p>
`;

exports[`<Paragraph /> renders with a string 1`] = `
.emotion-0 {
  color: rgb(77,83,86);
  font-family: sans-serif;
  font-family: Lato;
  font-style: normal;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  margin-top: 8px;
}

.emotion-0:first-child:not(style),
.emotion-0 style:first-child + * {
  margin-top: 0;
}

<p
  class="example-class emotion-0"
  data-cy="othertest"
  data-example="testdata"
>
  Some example text.
</p>
`;
